--- a/plugins/processing/simple-visualisation/CMakeLists.txt
+++ b/plugins/processing/simple-visualisation/CMakeLists.txt
@@ -1,3 +1,8 @@
+IF(OV_DISABLE_GTK)
+  MESSAGE(STATUS  "Skipping Plugins: Simple Visualisation, no GTK")
+  RETURN()
+ENDIF(OV_DISABLE_GTK)
+
 PROJECT(openvibe-plugins-simple-visualisation)
 
 SET(PROJECT_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
