--- a/applications/developer-tools/vrpn-simulator/CMakeLists.txt
+++ b/applications/developer-tools/vrpn-simulator/CMakeLists.txt
@@ -1,3 +1,8 @@
+IF(OV_DISABLE_GTK)
+  MESSAGE(STATUS  "Skipping VRPN Simulator, no GTK")
+  RETURN()
+ENDIF(OV_DISABLE_GTK)
+
 PROJECT(openvibe-vrpn-simulator)
 
 SET(PROJECT_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
