Add ebml header when generate a new file with generic stream writer.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

Former-commit-id: 79b605b46957eac594450ca5900428f54bc930df

--- a/modules/ebml/CMakeLists.txt
+++ b/modules/ebml/CMakeLists.txt
@@ -21,9 +21,9 @@ INCLUDE("FindOpenViBECommon")
 # Test applications
 # ---------------------------------
 OPTION(BUILD_OPENVIBE_MODULE_EBML_EXAMPLES "Build OpenViBE module EBML examples" OFF)
-IF(BUILD_OPENVIBE_MODULE_EBML_EXAMPLES)
-	SUBDIRS(test)
-ENDIF(BUILD_OPENVIBE_MODULE_EBML_EXAMPLES)
+IF(OV_COMPILE_TESTS)
+        ADD_SUBDIRECTORY(test)
+ENDIF(OV_COMPILE_TESTS)
 
 # ---------------------------------
 # Target macros
