Plugins: Moved the BioSemi ActiveTwo driver from contrib/ to core
Change follows Mensia/Inria transfer contract dated 21.11.2014


Former-commit-id: e1042ea14e96189acd848800b92c221c0a9ef648

--- a/applications/platform/acquisition-server/CMakeLists.txt
+++ b/applications/platform/acquisition-server/CMakeLists.txt
@@ -26,6 +26,7 @@ INCLUDE("FindOpenViBEModuleFS")
 INCLUDE("FindThirdPartyGTK")
 
 # These scripts will also add directives to copy the necessary bin dlls if any
+INCLUDE("FindThirdPartyBioSemiLabViewAPI")
 INCLUDE("FindThirdPartyNeXus")
 INCLUDE("FindThirdPartyMicromed")
 INCLUDE("FindThirdPartyMitsar")
