Drivers: Moved the BrainProducts ActiCHamp driver from contrib/ to core
Change follows Mensia/Inria transfer contract dated 21.11.2014


Former-commit-id: 09f3d9482bdb35d94273abb76f072cebfd98a2b5

--- a/applications/platform/acquisition-server/CMakeLists.txt
+++ b/applications/platform/acquisition-server/CMakeLists.txt
@@ -27,6 +27,7 @@ INCLUDE("FindThirdPartyGTK")
 
 # These scripts will also add directives to copy the necessary bin dlls if any
 INCLUDE("FindThirdPartyBioSemiLabViewAPI")
+INCLUDE("FindThirdPartyActiCHampAPI")
 INCLUDE("FindThirdPartyNeXus")
 INCLUDE("FindThirdPartyMicromed")
 INCLUDE("FindThirdPartyMitsar")
