Fix typo + absolute path.
Signed-off-by: Serrière Guillaume <guillaume.serriere@inria.fr>

Former-commit-id: c57018c313495b1b50c47e10e4176026737d11ea

--- a/plugins/processing/classification/CMakeLists.txt
+++ b/plugins/processing/classification/CMakeLists.txt
@@ -25,6 +25,13 @@ INCLUDE("FindThirdPartyITPP")
 INCLUDE("FindThirdPartyEigen")
 
 # ---------------------------------
+# Test applications
+# ---------------------------------
+IF(OV_COMPILE_TESTS)
+	ADD_SUBDIRECTORY(test)
+ENDIF(OV_COMPILE_TESTS)
+
+# ---------------------------------
 # Target macros
 # Defines target operating system
 # Defines target architecture
