--- a/plugins/processing/classification/test/CMakeLists.txt
+++ b/plugins/processing/classification/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-PROJECT(test_accurancy)
+PROJECT(test_accuracy)
 
 IF(WIN32)
 	ADD_DEFINITIONS(-DTARGET_OS_Windows)
@@ -10,7 +10,7 @@ ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
 ADD_DEFINITIONS(-DTARGET_ARCHITECTURE_i386)
 	
 INCLUDE_DIRECTORIES(../src)
-ADD_EXECUTABLE(${PROJECT_NAME} test_accurancy.cpp)
+ADD_EXECUTABLE(${PROJECT_NAME} test_accuracy.cpp)
 
 #INCLUDE("FindOpenViBE")
 
